fix name alignment

--- a/css/base.css
+++ b/css/base.css
@@ -181,7 +181,6 @@ h1.name {
     font-weight: 800;
     font-size: 3.5em;
     animation-delay: 1.0s;
-    margin-top: -12px;
 }
 
 .center {
